# x86_to_RISCV

./: CMakeLists.txt  README.md
build_riscv/: CMakeLists.txt  main_riscv
build_x86/: CMakeLists.txt  fibonacci  main_x86
example/: fibonacci.c
include/: ZycoreExportConfig.h  binparse.h  decoder.h  elfparse.h  encoder.h  helper.h  rvcontext.h
src/: binparse.c  binparse.cpp  elfparse.c  encoder.c  helper.c  main.c  main.cpp  main.h  rvcontext.c  zydis.c
